# merkle-tree-checksum

./: .gitignore  Cargo.toml  README.md  file_format_specification.md
merkle-tree/: Cargo.toml
merkle-tree-checksum/: Cargo.toml
merkle-tree/src/: lib.rs  merkle_utils.rs
merkle_tree/: Cargo.toml
merkle_tree/src/: iter_utils.rs  lib.rs  merkle_utils.rs  thread_pool.rs
merkle_tree/tests/: generator_test.rs  hash_data_test.rs
merkle_tree/tests/utils/: mod.rs
merkle_tree_checksum/: Cargo.toml  build.rs
merkle_tree_checksum/src/: crc32_utils.rs  error_types.rs  file_header.rs  format_functions.rs  hash_enum.rs  main.rs  parse_functions.rs  utils.rs
merkle_tree_checksum/tests/: .gitignore  compare_gen_ref.rs  roundtrip.rs  run_snapbox.rs  run_trycmd.rs  verify_bad.rs
merkle_tree_checksum/tests/gen_ref/: template_gen_ref_long.toml.gpp  update_gen_ref_inputs.sh
merkle_tree_checksum/tests/gen_ref/sha3_512_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/: crc32_gen_ref.stderr  sha224_gen_ref.stderr
merkle_tree_checksum/tests/gen_ref_cmd/blake2b512_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/blake2s256_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/blake3_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/crc32_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha224_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha256_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha384_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha3_224_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha3_256_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha3_384_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha3_512_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha512_224_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha512_256_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_cmd/sha512_gen_ref.out/: hash_out
merkle_tree_checksum/tests/gen_ref_short_cmd/: sha256_gen_ref_short.toml
merkle_tree_checksum/tests/gen_ref_short_cmd/sha256_gen_ref_short.out/: hash_out_short
merkle_tree_checksum/tests/help_cmd/: help_out_generate_long.stdout  help_out_generate_long.toml  help_out_generate_short.stdout  help_out_generate_short.toml  help_out_long.stdout  help_out_long.toml  help_out_short.stdout  help_out_short.toml  help_out_verify_long.stdout  help_out_verify_long.toml  help_out_verify_short.stdout  help_out_verify_short.toml
merkle_tree_checksum/tests/reference_files/: 16_byte_file  20_byte_file  hash_out  hash_out_badhash  hash_out_badlen  hash_out_badlen_last  hash_out_malformed  hash_out_short  hash_out_short_bad  hash_out_short_badhash  hash_out_short_malformed  regenerate_hash_files.sh
merkle_tree_checksum/tests/utils/: mod.rs
merkle_tree_checksum/tests/verify/sha384_verify.in/: hash_out
merkle_tree_checksum/tests/verify/sha3_384_verify.in/: hash_out
merkle_tree_checksum/tests/verify_bad_cmd/: sha256_verify_badhash.stderr  sha256_verify_badlen.stderr  sha256_verify_badlen_last.stderr  sha256_verify_malformed.stderr  sha256_verify_short_badhash.stderr  sha256_verify_short_malformed.stderr
merkle_tree_checksum/tests/verify_cmd/: sha512_224_verify.stderr
merkle_tree_checksum/tests/verify_cmd/blake2b_verify.in/: hash_out_altname
merkle_tree_checksum/tests/verify_cmd/blake2s256_verify.in/: hash_out
merkle_tree_checksum/tests/verify_cmd/blake2s_verify.in/: hash_out_altname
merkle_tree_checksum/tests/verify_cmd/sha3_224_verify.in/: hash_out
merkle_tree_checksum/tests/verify_cmd/sha3_256_verify.in/: hash_out
merkle_tree_checksum/tests/verify_cmd/sha512_224_verify.in/: hash_out
merkle_tree_checksum/tests/verify_cmd/sha512trunc224_verify.in/: hash_out_altname
merkle_tree_checksum/tests/verify_cmd/sha512trunc256_verify.in/: hash_out_altname
merkle_tree_checksum/tests/verify_short_cmd/: sha256_verify_short.stderr  sha256_verify_short.toml
merkle_tree_checksum/tests/verify_short_cmd/sha256_verify_short.in/: hash_out_short
merkle_tree_test_utils/: Cargo.toml
merkle_tree_test_utils/src/: lib.rs
