[workspace]
members = ["merkle_tree", "merkle_tree_checksum"]

# Below dependencies are bottlenecks from profiling
# We don't care about dependency internals when debugging our code
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.sha3]
opt-level = 3
[profile.dev.package.blake2]
opt-level = 3
[profile.dev.package.blake3]
opt-level = 3
[profile.dev.package.crc32fast]
opt-level = 3
[profile.dev.package.regex]
opt-level = 3

[profile.profile]
inherits = "release"
# Line tables are enough for profiling purposes
debug = 1
