[package]
name = "merkle_tree"
version = "0.4.1"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10"
generic-array = "0.14"
num-iter = "0.1"
pollster = "0.3"
# The more popular "generator" library has potential unsoundness issues
# Prefering genawaiter with more documentation and no stack-switch shenanigans
genawaiter = {version = "0.99", default-features = false}

crossbeam-channel = "0.5"

[dev-dependencies]
sha2 = "0.10"
permutohedron = "0.2"
