[package]
name = "merkle_tree"
version = "0.5.0"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10"
generic-array = "0.14"
arrayvec = "0.7"
hex = "0.4"
num-iter = "0.1"

crossbeam-channel = "0.5"
hwlocality = { version = "1.0.0-alpha.3", default-features = false, optional = true }
crossbeam-deque = "0.8.5"

[dev-dependencies]
sha2 = "0.10"
permutohedron = "0.2"

[features]
default = ["hwlocality"]
hwlocality = ["dep:hwlocality"]
hwlocality_vendored = ["hwlocality", "hwlocality/vendored"]
