[package]
name = "merkle_tree_checksum"
description = "Computes a Merkle Tree hash over the given files"
version = "0.5.1"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "~2.33"
walkdir = "2.3"
indicatif = "0.16"
enquote = "1.0"
semver = "1.0"
hex = "0.4"
lazy_static = "1.4"
# Enabling proc-macro pulls in too many dependencies
cached = { version = "0.26", default-features = false}
crossbeam-channel = "0.5"
git-version = "0.3"

#crc32-digest uses an outdated version of the Digest trait
digest = "0.9"
generic-array = "0.14"
crc32fast = "1.2"
sha2 = { version = "0.9", features = ["asm"] }
sha3 = "0.9"
blake2 = "0.9"
# = to be extra careful with backwards-compatibility
merkle_tree = { version = "=0.4.0", path = "../merkle_tree"}

[dependencies.clap]
version = "~2.33" # ~ specification from crates.io
default-features = false
features = [ "wrap_help", "color", "suggestions" ]

# Pull in perf feature to speed up matching
# Both transitive dependency of indicatif and used to parse hash records
[dependencies.regex]
version = "1.5"
default-features = false
features = ["std", "perf"]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
# Needed to allow imports
predicates = {version = "2.0", default-features = false}
rand = "0.8"
serial_test = "0.5"
scopeguard = "1.1"
