[package]
name = "merkle_tree_checksum"
description = "Computes a Merkle Tree hash over the given files"
version = "0.7.0"
authors = ["rlee287 <rlee287@yahoo.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3"
indicatif = "0.17"
enquote = "1.0"
semver = "1.0"
hex = "0.4"
# Enabling proc-macro pulls in too many dependencies
cached = { version = "0.51", default-features = false}
crossbeam-channel = "0.5"
git-version = "0.3"
const_format = "0.2"
strum = "0.26"
strum_macros = "0.26" # We import this too

#crc32-digest uses an outdated version of the Digest trait
digest = "0.10"
generic-array = "0.14"
crc32fast = "1.2"
sha2 = { version = "0.10", features = ["asm"] }
sha3 = { version = "0.10", features = ["asm"] }
blake2 = { version = "0.10" }
blake3 = { version = "1.3", features = ["traits-preview"] }
# = to be extra careful with backwards-compatibility
merkle_tree = { version = "=0.5.0", path = "../merkle_tree", features = ["hwlocality_vendored"] }

[dependencies.clap]
version = "4.5"
default-features = false
features = [ "std", "cargo", "help", "usage", "error-context", "wrap_help", "color", "suggestions", "deprecated" ]

# Pull in perf feature to speed up matching
# Both transitive dependency of indicatif and used to parse hash records
[dependencies.regex]
version = "1.5"
default-features = false
features = ["std", "perf"]

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
trycmd = {version = "0.15", default-features = false, features = ["diff", "filesystem"]}
scopeguard = "1.1"
snapbox = { version = "0.6", features = ["cmd"] }
tempfile = "3.10.1"
